# v-ads.v2

./: .gitignore  INSTALL.md  LICENSE  Makefile  README.md  _deploy.py  dashboard.html  docker-compose.yml  pyproject.toml  run_local.py
configs/: base.yaml  dev.yaml  ortb_request_schema.json  prod.yaml
deployment/docker/: Dockerfile
deployment/grafana/dashboards/: liteads.json
deployment/nginx/: nginx.conf
deployment/prometheus/: prometheus.yml
liteads/ad_server/: main.py
liteads/ad_server/middleware/: __init__.py  metrics.py
liteads/ad_server/routers/: __init__.py  ad.py  admin.py  analytics.py  auth.py  demand.py  event.py  health.py  openrtb.py  settings.py  supply_demand.py  vast_tag.py
liteads/ad_server/services/: ad_service.py  analytics_service.py  demand_forwarder.py  event_service.py  openrtb_service.py  pod_service.py  vast_builder.py
liteads/ad_server/static/: dashboard.html
liteads/common/: __init__.py  cache.py  config.py  countries.py  database.py  device.py  exceptions.py  extraction.py  geoip.py  logger.py  orm_utils.py  ortb_defaults.py  ortb_enricher.py  tracking.py  utils.py  vast.py
liteads/ml_engine/: __init__.py
liteads/ml_engine/data/: __init__.py  dataset.py
liteads/ml_engine/features/: __init__.py  builder.py  config.py  processor.py
liteads/ml_engine/models/: __init__.py  deepfm.py  layers.py  lr.py
liteads/ml_engine/serving/: __init__.py  predictor.py
liteads/ml_engine/training/: __init__.py  trainer.py
liteads/models/: __init__.py  ad.py  base.py
liteads/rec_engine/: __init__.py  engine.py
liteads/schemas/: __init__.py  internal.py  openrtb.py  request.py  response.py
scripts/: benchmark.py  generate_mock_data.py  init_db.py  init_db.sql  init_test_data.py  migrate_ad_decision.sql  migrate_supply_demand_fields.sql  test_full_flow.py
tests/: conftest.py
tests/test_ad_server/: test_ad.py  test_adtelligent_model.py  test_event.py  test_health.py  test_orm_utils.py  test_vast_pipeline_helpers.py  test_vast_tag.py
tests/test_ml_engine/: test_features.py  test_models.py
tests/test_rec_engine/: test_engine.py  test_filters.py
(+11 files in other folders)
